=============
Release 0.6.8
=============

* fix a possible rounding bug if triggers are given in ms
* artefacts are computed as medians and not means over the signal
* can turn off shared memory if needed

=============
Release 0.6.7
=============

* optimizations for clusters (auto blosc and network bandwith)
* addition of a dead_channels option in the [detection] section, as requested
* prevent user to remove median with only 1 channel
* fix for parallel writes in HDF5 files
* hide h5py FutureWarning

=============
Release 0.6.6
=============

* fix for matplotlib 2.2.2
* fix a bug when loading merged data with phy GUI
* faster support for native MCD file with pyMCStream
* more robust whitening for large arrays with numerous overlaps
* add an experimental mode to refine coreset (isolated spikes)
* put merging units in Hz^2 in the merging GUI
* add a HDF5 compression mode to greatly reduce disk usage for very large probe
* add a Blosc compression mode to save bandwith for clusters
* fix a display bug in the merging GUI when performing multiple passes

=============
Release 0.6.5
=============

* reduce memory consumption for mixture removal with shared memory
* made an explicit parameter cc_mixtures for mixture removal in the [clustering] section
* Minor fixes in the MATLAB GUI
* fix in the exact times shown during preview if second is specified
* prevent errors if filter is False and overwrite is False

=============
Release 0.6.4
=============

* fix a bug in the BEER for windows platforms, enhancing robustness to mpi data types
* speed up the software when using ignore_dead_times
* ensure backward compatibility with hdf5 version for MATLAB
* fix a rare bug in clustering, when no spikes are found on electrodes
* fix a bug in the MATLAB GUI when reloading saved results, skipping overlap fixes

=============
Release 0.6.3
=============

* fix a bug if the parameter file have tabulations characters
* add a tab to edit parameters directly in the launcher GUI