@@ -102,7 +102,6 @@ class CircusParser(object):
         f_next, extension = os.path.splitext(self.file_name)
         file_path         = os.path.dirname(self.file_name)
         self.file_params  = f_next + '.params'
-        self.logfile      = f_next + '.log'
         self.parser       = configparser.ConfigParser()
 
         ## First, we remove all tabulations from the parameter file, in order
@@ -154,6 +153,28 @@ class CircusParser(object):
             for section in self.__all_sections__:
                 if self.parser._sections[section].has_key(key):
                     self.parser._sections[section][key] = value
+
+        try:
+            os.makedirs(f_next)
+        except Exception:
+            pass
+
+        self.parser.set('data', 'data_file', self.file_name)
+
+        if self.parser.get('data', 'output_dir') != '':
+          path = os.path.abspath(os.path.expanduser(self.parser.get('data', 'output_dir')))
+          self.parser.set('data', 'output_dir', path)
+          file_out = os.path.join(path, os.path.basename(f_next))
+          if not os.path.exists(file_out):
+            os.makedirs(file_out)
+        else:
+          file_out = os.path.join(f_next, os.path.basename(f_next))
+
+        self.parser.set('data', 'data_file_no_overwrite', file_out + '_all_sc.dat')
+        self.parser.set('data', 'file_out', file_out) # Output file without suffix
+        self.parser.set('data', 'file_out_suff', file_out  + self.parser.get('data', 'suffix')) # Output file with suffix
+        self.parser.set('data', 'data_file_noext', f_next)   # Data file (assuming .filtered at the end)
+        self.logfile      = file_out + '.log'
 
 
         self.probe = read_probe(self.parser)
@@ -270,26 +291,7 @@ class CircusParser(object):
             if comm.rank == 0:
                 print_and_log(["Only 3 detection modes for peaks in [detection]: negative, positive, both"], 'error', logger)
 
-        try:
-            os.makedirs(f_next)
-        except Exception:
-            pass
-
-        self.parser.set('data', 'data_file', self.file_name)
-
-        if self.parser.get('data', 'output_dir') != '':
-          path = os.path.abspath(os.path.expanduser(self.parser.get('data', 'output_dir')))
-          self.parser.set('data', 'output_dir', path)
-          file_out = os.path.join(path, os.path.basename(f_next))
-          if not os.path.exists(file_out):
-            os.makedirs(file_out)
-        else:
-          file_out = os.path.join(f_next, os.path.basename(f_next))
-
-        self.parser.set('data', 'data_file_no_overwrite', file_out + '_all_sc.dat')
-        self.parser.set('data', 'file_out', file_out) # Output file without suffix
-        self.parser.set('data', 'file_out_suff', file_out  + self.parser.get('data', 'suffix')) # Output file with suffix
-        self.parser.set('data', 'data_file_noext', f_next)   # Data file (assuming .filtered at the end)
+        
 
         is_cluster = check_if_cluster()
 
@@ -529,9 +531,10 @@ class CircusParser(object):
             print_and_log(['Writing value %s for %s:%s' %(value, section, flag)], 'debug', logger)
         self.parser.set(section, flag, value)
         if preview_path:
-            f     = open(self.get('data', 'preview_path'), 'r')
+            f = open(self.get('data', 'preview_path'), 'r')
         else:
-            f     = open(self.file_params, 'r')
+            f = open(self.file_params, 'r')
+
         lines = f.readlines()
         f.close()
         spaces = ''.join([' ']*(max(0, 15 - len(flag))))
