@@ -5,6 +5,8 @@ Release 0.6.8
 * fix a possible rounding bug if triggers are given in ms
 * artefacts are computed as medians and not means over the signal
 * can turn off shared memory if needed
+* a particular pattern can be specified for neuralynx files
+* fix bugs with output_dir, as everything was not saved in the folder
 
 =============
 Release 0.6.7
